--- a/src/block/post-grid/style.scss
+++ b/src/block/post-grid/style.scss
@@ -10,6 +10,7 @@
 $columns: 3;
 .ggm-pg-grid {
     margin: 0 -10px;
+    position: relative;
     @media (min-width: 992px){
         @for $i from 1 through $columns {
             &.grid-size-#{$i} {
